@@ -1,3 +1,8 @@
+2004-03-11  Derek Price  <derek@ximbiot.com>
+
+	* xsize.h: Move the default definition of SIZE_MAX into
+	windows-NT/config.h.in.
+
 2004-03-07  Derek Price  <derek@ximbiot.com>
 
 	* xsize.h: Provide a default definition of SIZE_MAX for Windows.
